--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1049,3 +1049,43 @@ doi = {10.1109/EURCON.2007.4400546}}
 	pages={1558-1564},
 	doi={10.1109/PROC.1977.10770},
 }
+
+@article{hallm,
+   author = "Hall, M.",
+   title = "Resolution and uncertainty in spectral decomposition", 
+   journal= "First Break",
+   year = "2006",
+   volume = "24",
+   number = "12",
+   doi = "https://doi.org/10.3997/1365-2397.2006027",
+   url = "https://www.earthdoc.org/content/journals/10.3997/1365-2397.2006027",
+   publisher = "European Association of Geoscientists \& Engineers",
+   issn = "0263-5046",
+   type = "Journal Article"}
+
+@article{heisenberg1927,
+  author = {Heisenberg, W.},
+  journal = {Zeitschrift f\"{u}r Physik},
+  keywords = {juergen},
+  pages = {879--893},
+  title = {{\"{U}ber den anschaulichen Inhalt der quantentheoretischen Kinematik und Mechanik}},
+  year = {1927},
+}
+
+@article{gabor2,
+author = {Maclennan, Bruce},
+year = {1994},
+month = {11},
+title = {Gabor Representations of Spatiotemporal Visual Images},
+url = {http://www.its.caltech.edu/~matilde/GaborLocalization.pdf}}
+
+
+@article{doerflersouls,
+author = {Evangelista, Gianpaolo and Doerfler, Monika and Matusiak, Ewa},
+year = {2013},
+month = {08},
+title = {Arbitrary Phase Vocoders by means of Warping},
+volume = {7},
+journal = {Musica e Tecnologia},
+doi = {10.13128/Music_Tec-13210}
+}
