--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -999,7 +999,7 @@ author = {Dongarra, Jack and Sullivan, Francis},
 year = {2000},
 month = {01},
 title = {Top ten algorithms of the century},
-journal = {Computing in Science and Engineering - C in S&E}
+journal = {Computing in Science and Engineering - C in S\&E}
 }
 
 @article{korpel,
