--- a/latex/ch2_background.tex
+++ b/latex/ch2_background.tex
@@ -144,6 +144,8 @@ Continuing from the discussion of the DFT in the previous section \ref{sec:freqa
 
 According to \textcite{korpel}, ``Gabor came to the conclusion that the difficulty lay in our mutually exclusive formulations of time analysis and frequency analysis ... he suggested a new method of analyzing signals in which time and frequency play symmetrical parts.''
 
+Gabor derived the principal of time-frequency uncertainty from Heisenberg's uncertainty principle in quantum physics, which states that ``the more precisely the position [of an electron] is determined, the less precisely the momentum is known, and conversely'' (\cite{heisenberg1927}). Gabor's time-frequency uncertainty principle states that ``although we can carry out the analysis [of the acoustic signal] with any degree of accuracy in the time direction or frequency direction, we cannot carry it out simultaneously in both beyond a certain limit'' (\cite{gabor1946}). This is also referred to as the Gabor limit, and $\Delta t$ and $\Delta f$ are defined as ``the uncertainties inherent in the definition of the epoch t and frequency f of an oscillation.'' Gabor referred to the time-frequency tile $\Delta t \Delta f$ as the \textit{logon}, or smallest possible unit of time-frequency information.
+
 Let's start with a description of the time-domain unit impulse signal or sequence (\cite[Chapter~2]{melbook}) in equation \ref{equation:delta}:
 \begin{flalign}\label{equation:delta}
 \delta[n] = \begin{cases}
@@ -152,20 +154,18 @@ Let's start with a description of the time-domain unit impulse signal or sequenc
 \end{cases}
 \end{flalign}
 
-The impulse is a useful signal, as it is the ``simplest [time-domain] sequence because it has only one nonzero value, which occurs at n = 0. The mathematical notation is that of the Kronecker delta function'' (\cite[Chapter~5]{dspfirst}). Note the Kronecker delta function is the discrete equivalent of the Dirac delta function (\cite[Chapter~2]{melbook}). Contrast this with the DFT of a signal that is only non-zero at the 0-frequency component, or the DC component, which is a ``cosine signal with zero frequency'' (\cite[Chapter~3]{dspfirst}).
+The impulse is a useful signal, as it is the ``simplest [time-domain] sequence because it has only one nonzero value, which occurs at n = 0. The mathematical notation is that of the Kronecker delta function'' (\cite[Chapter~5]{dspfirst}). Note the Kronecker delta function is the discrete equivalent of the Dirac delta function (\cite[Chapter~2]{melbook}). Contrast this with the DFT spectrum of a signal that is only non-zero at the 0 Hz (or DC) frequency component, which is a ``cosine signal with zero frequency'' (\cite[Chapter~3]{dspfirst}).
 
-Figure \ref{fig:gaborfirst} shows the unit impulse contrasted with the DC-component DFT, and these two in fact demonstrate the mutually exclusive formulations of time and frequency. The unit impulse, which has a single non-zero value in the time domain, has an infinite extent in the frequency domain. Conversely, the DC-component DFT has a single non-zero value in the frequency domain, but has an infinite extent in the time domain.
+Figure \ref{fig:gaborfirst}(a) shows the unit impulse contrasted with the DC-component DFT, and these two in fact demonstrate the mutually exclusive formulations of time and frequency. The unit impulse, which has a single non-zero value in the time domain, has an infinite extent in the frequency domain. Conversely, the DC-component DFT has a single non-zero value in the frequency domain, but has an infinite extent in the time domain. Figure \ref{fig:gaborfirst}(b) shows the intuition of the time-frequency tradeoff as a choice of signal length. The sine wave's periodicity is more apparent over longer periods of time $\Delta t$, but the detail of the individual sample values become lost.
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics[width=7cm]{./images-tftheory/gabor13.png}
-	\caption{The mutually exclusive formulations of time and frequency represented by two extremes -- unit impulse on the bottom left, non-zero DC DFT spectrum on the top right}
+	\subfloat[Mutually exclusive formulations of time and frequency by two extremes, the unit impulse (bottom left) and the 0 Hz cosine DFT spectrum (top right)]{\includegraphics[height=5cm]{./images-tftheory/gabor13.png}}
+	\hspace{0.5em}
+	\subfloat[The periodicity of the sine wave is more apparent with a longer $\Delta t$, at the cost of temporally localized sample values]{\includegraphics[height=5cm]{./images-tftheory/gabor2.png}}
+	\caption{Time-frequency tradeoff intuitions (\cite{gabor2})}
 	\label{fig:gaborfirst}
 \end{figure}
-
-Gabor derived the principal of time-frequency uncertainty from Heisenberg's uncertainty principle in quantum physics, which is that $\sigma_{x}\sigma_{p} \ge \sfrac{h}{4\pi}$ (\cite{hallm}). In words, ``the more precisely the position [of an electron] is determined, the less precisely the momentum is known, and conversely'' (\cite{heisenberg1927}).
-
-Gabor's time-frequency uncertainy principle is $\sigma_{t}\sigma_{f} \ge \sfrac{1}{4\pi}$, or $\Delta t\Delta f \ge 1$. In words, ``although we can carry out the analysis [of the acoustic signal] with any degree of accuracy in the time direction or frequency direction, we cannot carry it out simultaneously in both beyond a certain limit'' (\cite{gabor1946}). This is also referred to as the Gabor limit, and $\Delta t$ and $\Delta f$ are defined by \textcite{gabor1946} as ``the uncertainties inherent in the definition of the epoch t and frequency f of an oscillation.'' Gabor referred to the time-frequency tile $\Delta t \Delta f$ the \textit{logon}, or smallest possible unit of time-frequency information.
 
 The result of the time-frequency uncertainty principle is a property of the choice of the Fourier transform to swap between the mutually exclusive domains of time and frequency. To further elaborate that this is a consequence of the Fourier transform, several psychacoustic studies have shown that humans can exhibit better time-frequency resolution than the Gabor limit. \textcite{psycho2} describes one of these experiments:
 
@@ -179,109 +179,54 @@ More recently, according to \textcite{psycho1}:
 	[w]e have conducted the first direct psychoacoustical test of the Fourier uncertainty principle in human hearing, by measuring simultaneous temporal and frequency discrimination. Our data indicate that human subjects often beat the bound prescribed by the uncertainty theorem, by factors in excess of 10.
 \end{quote}
 
-Note that these are not a refutation of Gabor's ideas, but in fact a confirmation. \textcite{gabor1946} himself stated that ``most sound analysis and processing tools today continue to use models based on spectral theories... [w]e believe it is time to revisit this issue.'' \textcite{psycho1} further state that:
-
-\begin{quote}
-	[i]n time-frequency analysis, it has been proven that linear operators cannot exceed the uncertainty bound... Nonlinearity does not by itself confer any acuity advantage, and in fact most nonlinearities are merely distortions and thus deleterious. However [...] any carefully crafted analysis that can beat this limit must necessarily be nonlinear.
-\end{quote}
-
-Nevertheless, if we choose to proceed with time-frequency analysis despite the limitations, it is preferable to minimize time-frequency uncertainty, or to set the \textit{logon} ($\Delta t \Delta f$) to it lowest possible value, $1$. \textcite{gabor1946} states and answers the question as follows:
+Note that these are not refutations of Gabor's ideas, but in fact a confirmation. \textcite{gabor1946} himself stated that ``most sound analysis and processing tools today continue to use models based on spectral theories... [w]e believe it is time to revisit this issue.'' Nevertheless, if we choose to proceed with time-frequency analysis despite the limitations, it is preferable to minimize time-frequency uncertainty, or to set the \textit{logon} ($\Delta t \Delta f$) to it lowest possible value, unity. \textcite{gabor1946} asks:
 
 \begin{quote}
 What is the shape of the signal for which the product $\Delta t \Delta f$ actually assumes the smallest possible value? [... it is] the modulation product of a harmonic oscillation of any frequency with a pulse of the form of the probability function
 \end{quote}
 
-\textcite{gabor1946} discovered that this can be done by multiplying overlapping, temporally consecutive portions of the input signal with shifted copies of the Gaussian window function, and by taking the Fourier transform of the Gaussian-windowed segments of the signal. In other words, Gabor proposed that any signal of finite energy can be decomposed into a linear combination of time-frequency shifts of the Gaussian function. The Gabor transform $G(f)$ of a discrete-time signal $x(n)$ is described in equation (1):
-\begin{flalign}
-	\nonumber \mathbf{G(f)} &= [G_{1}(f), G_{2}(f), ..., G_{k}(f)]\\
-	G_{m}(f) &= \sum_{n = -\infty}^{\infty}x(n)g(n-\beta m)e^{-j2\pi \alpha n},
+Gabor performed joint time-frequency analysis by multiplying overlapping, temporally consecutive portions of the input signal with shifted copies of the Gaussian window function (i.e. the probability function from the quote above), and by taking the Fourier transform of the windowed segments of the signal. The Gabor transform $G(f)$ of a discrete-time signal $x(n)$ is described by equation \ref{equation:gabort}:
+\begin{flalign}\tag{7}\label{equation:gabort}
+	\nonumber \mathbf{G(f)} &= [G_{1}(f), G_{2}(f), ..., G_{k}(f)], G_{m}(f) = \sum_{n = -\infty}^{\infty}x(n)g(n-\beta m)e^{-j2\pi \alpha n}
 \end{flalign}
 
-where $g(\cdot)$ is a Gaussian low-pass window function localized at 0, $G_{m}(f)$ is the DFT of the signal centered around time $\beta m$, and $\alpha$ and $\beta$ control the time and frequency resolution of the transform.
+where $g(\cdot)$ is a Gaussian low-pass window function localized at 0, $G_{m}(f)$ is the DFT of the signal centered around time $\beta m$, and $\alpha$ and $\beta$ control the time-frequency resolution of the transform.
 
-The mathematical details, derivations, and proofs of these equations are beyond the scope of this thesis. However, an interesting connection between \textcite{gabor1946}'s equations and \textcite{shannon1948}'s sampling theorem can be shown with a precursory overview of the equations. Gabor's original paper describes the Gaussian functions by the following set of equations:
-
-\begin{flalign}
-	\psi(t) &= \text{e}^{-\alpha^{2}(t-t_{0})}\text{cis}(2\pi f_{0}t + \phi)\\
-	\phi(f) &= \text{e}^{-\frac{\pi}{\alpha}^{2}(f-f_{0})^{2}}\text{cis}[-2\pi(f - f_{0}) + \phi)]\\
-	\Delta t &= \sqrt{\frac{\pi}{2}}\frac{1}{\alpha}, \Delta f = \frac{1}{\sqrt{2\pi}}\alpha
+The STFT, or short-time Fourier transform, has been described independently from Gabor's work (\cite{stftindie}), but additional research in the 1980s (\cite{dictionary}) led to the STFT being formalized and described as a special case of the Gabor transform, in recognition of Gabor's pioneering work. The STFT $X(f)$ of a discrete-time signal $x(n)$ is described by equation \ref{equation:stft}:
+\begin{flalign}\tag{8}\label{equation:stft}
+	\nonumber \mathbf{X(f)} &= [X_{1}(f), X_{2}(f), ..., X_{k}(f)], X_{m}(f) = \sum_{n = -\infty}^{\infty}x(n)g(n-mR)e^{-j2\pi f n}
 \end{flalign}
 
-The parameter $\alpha$ of the Gaussian function determines both $\Delta t$ and $\Delta f$. Figure \ref{fig:gauswidth} shows the effect of the width of the Gaussian function on the time-frequency resolution, and figure \ref{fig:gabortf} shows different sizes of \textit{logon} in the time-frequency plane.
+where $g(\cdot)$ are the time-shifted, localized windows, $X_{m}(f)$ is the DFT of the audio signal centered about time $mR$, and $R$ is the hop size between successive time-shifts of the window. Note how similar equations \ref{equation:gabort} and \ref{equation:stft} are, which is expected since the original Gabor transform is the STFT with a Gaussian window. Practically, the STFT allows the use of different windows and overlap sizes (\cite{stftinvertible}), as long as overlap-add conditions are respected.\footnote{\url{https://www.mathworks.com/help/signal/ref/iscola.html}}
+
+Figure \ref{fig:gabortf} shows different sizes of \textit{logon} in the time-frequency plane, and how the Gabor transform and the STFT with higher frequency or higher time resolution appear on the time-frequency plane.
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics[width=5cm]{./images-tftheory/gabor14.png}
-	\caption{The width of the Gaussian function, controlled by $\alpha$, and its effect on $\Delta t$ and $\Delta f$}
-	\label{fig:gauswidth}
-\end{figure}
-
-\begin{figure}[ht]
-	\centering
-	\subfloat[Mutually exclusive time and frequency, and the lower bound of time-frequency resolution defined by Gabor's limit]{\includegraphics[height=3.4cm]{./images-tftheory/gabor3.png}}\\
-	\subfloat[High frequency/low time, and low frequency/high time resolution logons]{\includegraphics[height=3.2cm]{./images-tftheory/gabor4.png}}
-	\caption{Different time-frequency resolutions (\cite{gabordiagrams})}
+	\subfloat[Pure time domain, pure frequency domain, and Gabor's time-frequency tiles of $\Delta t \Delta f = 1$]{\includegraphics[height=3.4cm]{./images-tftheory/gabor3.png}}\\
+	\subfloat[High frequency resolution vs. high time resolution]{\includegraphics[height=3.2cm]{./images-tftheory/gabor4.png}}
+	\caption{Different tiling of the time-frequency plane (\cite{gabordiagrams})}
 	\label{fig:gabortf}
 \end{figure}
 
-\newpagefill
-
-Alternate forms of the Gabor equations are derived by \textcite{gabor2}:
-\begin{flalign}
-	C_{\mathit{jk}}(t) &= e^{\frac{-\pi (t - j\Delta t)^{2}}{\alpha^{2}}} \cos{[2\pi k \Delta f(t-j\Delta t)]}\\
-	S_{\mathit{jk}}(t) &= e^{\frac{-\pi (t - j\Delta t)^{2}}{\alpha^{2}}} \sin{[2\pi k \Delta f(t-j\Delta t)]}\\
-	\phi_{\mathit{jk}} &= C_{\mathit{jk}} + jS_{\mathit{jk}}
-\end{flalign}
-
-As $\alpha \rightarrow \infty$, this reduces to the Fourier transform:
-\begin{flalign}
-	C_{\mathit{jk}}(t) &= \cos{[2\pi j k \Delta f(t - j \Delta t)]}\\
-	S_{\mathit{jk}}(t) &= \sin{[2\pi j k \Delta f(t - j \Delta t)]}\\
-	\phi_{\mathit{jk}}(t) &= e^{[2\pi j k \Delta f(t - j \Delta t)]}
-\end{flalign}
-
-As $\alpha \rightarrow 0$, this reduces to Dirac delta functions spaced at $\Delta t$, or unit impulse function as shown previously in \ref{equation:delta}:
-\begin{flalign}\label{equation:twodelta}
-	C_{\mathit{jk}}(t) &= S_{\mathit{jk}}(t) = \delta (t - j\Delta t) \\
-	\phi_{\mathit{jk}}(t) &= \delta (t - j \Delta t) + j \delta (t - j \Delta t) = a_{\mathit{ij}} + j b_{\mathit{ij}} 
-\end{flalign}
-
-We now explore the connection to Shannon's sampling theorem (\cite{shannon1948}). Shannon states that ``to reconstruct $\psi$ we must take equally spaced samples at a minimum of the Nyquist frequency, which is twice the maximal frequency.'' In equation \ref{equation:twodelta}, the $\alpha = 0$ limit of the Gabor equations represents exactly two samples, $a_{\mathit{ij}}$ and $b_{\mathit{ij}}$, for each $\Delta t$ interval.
-
-The STFT, or short-time Fourier transform, has been described independently from Gabor's work (\cite{stftindie}), but additional research in the 1980s (\cite{dictionary}) led to the STFT being formalized and described as a special case of the Gabor transform, in recognition of Gabor's pioneering work. The STFT $X(f)$ of a discrete-time signal $x(n)$ is described in equation (2):
-\begin{flalign}
-	\nonumber \mathbf{X(f)} &= [X_{1}(f), X_{2}(f), ..., X_{k}(f)]\\
-	X_{m}(f) &= \sum_{n = -\infty}^{\infty}x(n)g(n-mR)e^{-j2\pi f n},
-\end{flalign}
-
-where $g(\cdot)$ are the time-shifted, localized windows, $X_{m}(f)$ is the DFT of the audio signal centered about time $mR$, and $R$ is the hop size between successive time-shifts of the window. Note how similar equations (1) and (2) are, which is expected since the original Gabor transform is the STFT with a Gaussian window. Practically, the STFT allows the use of different windows and overlap sizes (\cite{stftinvertible}), as long as overlap-add conditions are respected.\footnote{\url{https://www.mathworks.com/help/signal/ref/iscola.html}}
-
-\textcite{doerflersouls} describe the powerful properties of the STFT and why its such an important tool in the analysis of acoustic signals:
-
-\begin{quote}
-	... the STFT has at least three souls: it is the Fourier transform of windowed portions of the signal, it is the convolution of the signal with modulated versions of the window and it is the scalar product of the signal with time-shifted modulated versions of the window. These three souls can be exploited in the applications, for the computation of the STFT and for its sampling ...
-\end{quote}
-
 Figure \ref{fig:stfts} shows the Gabor transform alongside the STFT using a popular choice of window, the Hamming window, for three different window sizes: 128 samples, 2048 samples, and 16384 samples, which at the sample rate of the glockenspiel signal (44100 Hz) represent $\sfrac{128}{44100}\cdot 1000 = $ 2.9 ms, 46.44 ms, and 371.52 ms respectively. The Hamming window was chosen because it is the default window in the MATLAB \Verb#spectrogram# function.\footnote{\url{https://www.mathworks.com/help/signal/ref/spectrogram.html}}
 
-The Hamming window is advantageous over the Gaussian window because it is exactly zero outside of its specified range. The Gaussian window asymptotially approaches zero but never reaches it. \textcite{gabor2} describes that the Gabor functions are not strictly local, because from their infinite Gaussian envelope, they stretch out to infinity. This is biologically problematic, but the Gaussian envelope is well-localized (99.7\% of its area is within 3 standard deviations of the mean), so that the Gabor transform with Gaussian windows is in practice a ``good enough approximation'' of biology. The Gaussian and Hamming windows are contrasted in figure \ref{fig:windows}.
+We close the chapter with a quote from \textcite{doerflersouls}, who describe the powerful properties of the STFT and why its such an important tool in the analysis of acoustic signals:
+
+\begin{quote}
+       ... the STFT has at least three souls: it is the Fourier transform of windowed portions of the signal, it is the convolution of the signal with modulated versions of the window and it is the scalar product of the signal with time-shifted modulated versions of the window. These three souls can be exploited in the applications, for the computation of the STFT and for its sampling ...
+\end{quote}
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics[width=10cm]{./images-tftheory/gaussianvshann.png}
-	\caption{The Gaussian and Hamming windows}
-	\label{fig:windows}
-\end{figure}
-
-\begin{figure}[ht]
-	\centering
-	\subfloat[STFT, 128-sample Hamming window]{\includegraphics[width=0.5\textwidth]{./images-gspi/gspi_hamm_128.png}}
-	\subfloat[Gabor transform, 128-sample Gaussian window]{\includegraphics[width=0.5\textwidth]{./images-gspi/gspi_gauss_128.png}}\\
-	\subfloat[STFT, 2048-sample Hamming window]{\includegraphics[width=0.5\textwidth]{./images-gspi/gspi_hamm_2048.png}}
-	\subfloat[Gabor transform, 2048-sample Gaussian window]{\includegraphics[width=0.5\textwidth]{./images-gspi/gspi_gauss_2048.png}}\\
-	\subfloat[STFT, 16384-sample Hamming window]{\includegraphics[width=0.5\textwidth]{./images-gspi/gspi_hamm_16384.png}}
-	\subfloat[Gabor transform, 16384-sample Gaussian window]{\includegraphics[width=0.5\textwidth]{./images-gspi/gspi_gauss_16384.png}}
-	\caption{Visual comparison of the Hamming-window STFT and the Gaussian-window STFT (i.e. the Gabor transform), using the Glockenspiel signal. Note how the time resolution decreases with the window size (blurry temporal events i.e. vertical lines), while the frequency resolution increases (sharper frequencies i.e. horizontal lines)}
+	\subfloat[STFT, 128-sample Hamming]{\includegraphics[width=0.5\textwidth]{./images-gspi/gspi_hamm_128.png}}
+	\subfloat[Gabor transform, 128-sample Gaussian]{\includegraphics[width=0.5\textwidth]{./images-gspi/gspi_gauss_128.png}}\\
+	\subfloat[STFT, 2048-sample Hamming]{\includegraphics[width=0.5\textwidth]{./images-gspi/gspi_hamm_2048.png}}
+	\subfloat[Gabor transform, 2048-sample Gaussian]{\includegraphics[width=0.5\textwidth]{./images-gspi/gspi_gauss_2048.png}}\\
+	\subfloat[STFT, 16384-sample Hamming]{\includegraphics[width=0.5\textwidth]{./images-gspi/gspi_hamm_16384.png}}
+	\subfloat[Gabor transform, 16384-sample Gaussian]{\includegraphics[width=0.5\textwidth]{./images-gspi/gspi_gauss_16384.png}}\\
+	\subfloat[2048-sample Gaussian vs. Hamming window]{\includegraphics[width=0.5\textwidth]{./images-tftheory/gaussianvshamming.png}}
+	\caption{Visual comparison of the Hamming-window STFT and the Gaussian-window STFT (i.e. the Gabor transform), using the Glockenspiel signal}
 	\label{fig:stfts}
 \end{figure}
 
